--- a/CoreCompat.EnterpriseLibrary.SemanticLogging/project.json
+++ b/CoreCompat.EnterpriseLibrary.SemanticLogging/project.json
@@ -16,7 +16,7 @@
   },
 
   "dependencies": {
-    "Newtonsoft.Json": "8.0.4-beta1"
+    "Newtonsoft.Json": "9.0.1"
   },
 
   "buildOptions": {
@@ -33,9 +33,16 @@
   "frameworks": {
     "netstandard1.5": {
       "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
-        "System.ComponentModel.TypeConverter": "4.0.1-rc2-24027",
-        "System.Threading.Tasks.Parallel": "4.0.1-rc2-24027"
+        "System.Runtime": "4.1.0",
+        "System.Runtime.InteropServices": "4.1.0",
+        "System.AppContext": "4.1.0",
+        "System.IO": "4.1.0",
+        "System.IO.FileSystem": "4.0.1",
+        "System.Diagnostics.Tracing": "4.1.0",
+        "System.ComponentModel.TypeConverter": "4.1.0",
+        "System.Threading.Tasks.Parallel": "4.0.1",
+        "System.Diagnostics.Tools": "4.0.1",
+        "System.Console": "4.0.0"
       },
       "buildOptions": {
         "define": [ "CORECLR", "SIGN" ]
