--- a/CoreCompat.EnterpriseLibrary.SemanticLogging.TextFile/project.json
+++ b/CoreCompat.EnterpriseLibrary.SemanticLogging.TextFile/project.json
@@ -16,7 +16,7 @@
   },
 
   "dependencies": {
-    "CoreCompat.EnterpriseLibrary.SemanticLogging": "6.0.1304-r2"
+    "CoreCompat.EnterpriseLibrary.SemanticLogging": "6.0.1304-r3"
   },
 
   "buildOptions": {
@@ -33,15 +33,11 @@
   "frameworks": {
     "netstandard1.5": {
       "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027"
+        "System.Threading.Timer": "4.0.1"
       },
       "buildOptions": {
         "define": [ "CORECLR", "SIGN" ]
       }
     }
-  },
-
-  "runtimes": {
-    "win7-x64": { }
   }
 }
